# dc_lab_4

./: .gitignore  CMakeLists.txt  commands.c  commands_spec.cc  main.c  parser.c  parser_spec.cc  process_file.c  process_file_spec.cc  uint1024_t.c  uint1024_t.h  uint1024_t_spec.cc  util.c
.github/workflows/: actions.yml  lab_1.yml  lab_1_release.yml  lab_2.yml  lab_2_release.yml  lab_3.yml  lab_3_release.yml
tests/: test1  test2  test3
